samples/_failures_safe/1761536843_aef454_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad9168ab.c: In function ‘main’:
./samples/SAFE/__tmp_ad9168ab.c:162:5: error: expected declaration or statement at end of input
  162 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_ad9168ab.c:162:5: error: expected declaration or statement at end of input
